# altr

./: CMakeLists.txt  README.md
Action/: CMakeLists.txt
Action/Action/: Action.cpp  main.cpp
Action/src/: Action.cpp  Action.h
Data/: act.txt  act_test.txt  look.txt  look_test.txt
Predictor/: CMakeLists.txt
Predictor/Data/: CMakeLists.txt  action1.txt  dataGenerator.cpp  observation1.txt
Predictor/Predictor/: Predictor.cpp  Predictor.h  main.cpp
Predictor/src/: Predictor.cpp  Predictor.h
RGB_tracker/: CMakeLists.txt
RGB_tracker/Application/: ConAllSystem.xml  Vision.xml  VisionRobot.xml  result1.txt  result2.txt  resultIN.txt  resultOUT.txt
RGB_tracker/Recognition/: Recognition.cpp  Recognition.h  state.cpp  state.h
RGB_tracker/Recognition/initialization_files/: blobDetector.ini  blobDetector.ini~
RGB_tracker/Recognition/simpleTrackingModule/: CMakeLists.txt~  Recognition.cpp~  Recognition.h~  main.cpp~  simpleTrackingModule.cpp  trackingC.cpp
RGB_tracker/src/: Recognition.cpp  Recognition.h  state.cpp  state.h
RGB_tracker/src/initialization_files/: blobDetector.ini
RGB_tracker/src/simpleTrackingModule/: main.cpp  simpleTrackingModule.cpp  simpleTrackingModule.h  trackingC.cpp  trackingC.h
